--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "main.js",
   "type": "module",
   "scripts": {
-    "start": "node main.js"
+    "start": "nodemon main.js"
   },
   "author": "",
   "license": "ISC",
@@ -29,6 +29,7 @@
     "mongoose": "^8.13.2",
     "multer": "^1.4.5-lts.2",
     "nodemailer": "^7.0.3",
+    "nodemon": "^3.1.10",
     "ollama": "^0.5.15",
     "ollama-node": "^0.1.28",
     "razorpay": "^2.9.6",
