--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "dayjs": "^1.11.19",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "ffmpeg": "^0.0.4",
