--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "ollama": "^0.5.15",
     "ollama-node": "^0.1.28",
     "razorpay": "^2.9.6",
+    "socket.io": "^4.8.1",
     "twilio": "^5.5.2",
     "uuid": "^11.1.0"
   }
