--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ollama-node": "^0.1.28",
     "razorpay": "^2.9.6",
     "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "twilio": "^5.5.2",
     "uuid": "^11.1.0"
   }
